[package]
name = "kistro"
version = "0.1.0"
authors = [
    "rick68@gmail.com",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kistro-rs/kistro-rs"
description = "Build kURL compatible addOn/packages"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "cargo-kistro"
